Fixded bug #72736 (Slow performance when fetching large dataset with mysqli / PDO)